# mobile-cloutfit

./: README.md
backend/: .env  .gitignore  Cargo.toml
backend/config/: log4rs.yaml
backend/controller/: Cargo.toml
backend/controller/src/: algorithm.rs  get_data.rs  lib.rs  recommendation.rs  user.rs
backend/main/: Cargo.toml
backend/main/src/: main.rs
backend/models/: Cargo.toml
backend/models/src/: algorithm.rs  clothing_data.rs  lib.rs  users.rs
backend/persistence/: Cargo.toml
backend/persistence/src/: catalog.rs  clothing_photos.rs  lib.rs  recommendation.rs  users.rs
backend/pycode/: algorithm.py  calculate_embeddings.py
backend/pycode/cloutfit_scraping/: scrapy.cfg
backend/pycode/cloutfit_scraping/cloutfit_scraping/: items.py  middlewares.py  pipelines.py  settings.py
backend/pycode/cloutfit_scraping/cloutfit_scraping/spiders/: mango_spider.py  zara_spider.py
backend/services/: Cargo.toml
backend/services/src/: authentication.rs  catalog.rs  item.rs  lib.rs  recommendations.rs  register.rs  user.rs  user_session.rs
backend/static/database_scripts/: cloutfit_db.sql
backend/static/html/: mail_verification_page.html
backend/utils/: Cargo.toml
backend/utils/src/: lib.rs
frontend/: App.tsx  Navigator.tsx  app.json  package-lock.json  package.json
frontend/utils/: LoadingIndicator.tsx  functions.ts  utils.ts
frontend/utils/modals/: interfaces.ts
frontend/view/authentication/: AuthContext.js  AuthScreen.tsx
frontend/view/catalog/: ShowDataGrid.tsx  useFetchClothes.ts
frontend/view/components/: TextInputComponent.tsx
frontend/view/components/errorScreens/: Unauthorised.tsx
frontend/view/components/headerComponents/: Menu.tsx  MobileHeader.tsx
frontend/view/detailScreen/: DetailScreen.tsx  TextDetail.tsx
frontend/view/favourites/: FavoritesScreen.tsx
frontend/view/favourites/web/: FavouritesWebScreen.tsx
frontend/view/forYou/: ForYouScreen.tsx
frontend/view/forYou/modal/: ModalInicial.tsx  ModalRefinar.tsx
frontend/view/forYou/recommendation/: RecommendationScreen.tsx
frontend/view/forYou/showrecommendations/: ShowRecommendations.tsx
frontend/view/profile/: AccountScreen.tsx
frontend/view/start/: HomePage.tsx  StartScreen.tsx  StartScreenMobile.tsx
