[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.5"
#actix-web = { version = "4", features = ["rustls-0_23"] }
actix-cors = "0.7"
actix-web = "4"

# - local dependencies
models = { path = "../models" }
controller = { path = "../controller" }
persistence = { path = "../persistence" }

# - database dependencies 
postgres = {version = "0.19.7"}
actix-rt = "2.2.0"
sqlx = { version = "0.5", features = ["postgres", "runtime-actix-rustls"] }

# - config dependencies
dotenv = "0.15.0"
log.workspace = true
log4rs.workspace = true
rand_core = "0.6.4"
rand_chacha = "0.3.1"


# - read the json
serde_json = "1.0.117"
