[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

# - for uuid
uuid = { version = "0.8", features = ["serde", "v4"] }

# - for date 
chrono = { version = "0.4", features = ["serde"] }

sqlx = { version = "0.5", features = ["postgres", "runtime-actix-rustls", "time",  "chrono" ] }

serde_json = "1.0"