[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
lazy_static="1.4.0"
# - local dependencies
models = { path = "../models" }
utils = { path = "../utils" }

log = "0.4.20"

# - to hash passwords
rand = "0.7"
rust-argon2 = "0.5"


# - Database dependencies 
postgres = {version = "0.19.7"}
actix-rt = "2.2.0"
sqlx = { version = "0.5", features = ["postgres", "runtime-actix-rustls", "time",  "chrono" ] }
dotenv = "0.15.0"
# sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }



# - config dependencies
chrono = { version = "0.4", features = ["serde"] }


serde_json = "1.0"
