[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
sqlx = { version = "0.5", features = ["postgres", "runtime-actix-rustls", "time",  "chrono" ] }

# - local dependencies
persistence = { path = "../persistence" }
models = { path = "../models" }
utils = { path = "../utils" }

# - send email 
lettre = "0.11.7"
lettre_email = "0.9"

# - regular expression
regex = "1.3.9"

# - for RFC 7617 protocol 
base64="0.21.4"

# - config dependencies
log.workspace = true
log4rs.workspace = true

# - secure cookies
rand = "0.8.5"
rand_core = "0.6.4"
rand_chacha = "0.3.1"

# - read json
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"

# - mobile sessions
jsonwebtoken = "9.0"
chrono = "0.4"